# RenderingEngine

./: .gitignore  .gitmodules  BaseApp.cpp  BaseApp.h  CMakeLists.txt  ClassDiagram.puml  Groupe5_RenderingEngine.rar  main.cpp
FixedPipeline/antoine/: AppAntoine.cpp
FixedPipeline/elvyn/: AppElvyn.cpp  AppElvyn.h  TestingZone.cpp  TestingZone.h
FixedPipeline/tom/: AppTom.cpp  AppTom.h
Minecraft/: ChunkGeneration.cpp  ChunkGeneration.h  Cube.cpp  Cube.h  Quad.cpp  Quad.h  WorldGeneration.cpp  WorldGeneration.h
Models/: cube.mtl
ScriptablePipeline/: App.cpp  App.h  AppCube.cpp  AppCube.h  AppTriangle.cpp  AppTriangle.h
ScriptablePipeline/EngineObjects/: Camera.cpp  Camera.h  EngineObject.cpp  EngineObject.h  GameObject.cpp  GameObject.h  Geometry.cpp  Geometry.h  RenderedObject.cpp  RenderedObject.h  RenderingContext.cpp  RenderingContext.h  Skybox.cpp  Skybox.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
Shaders/: ColoredCube.fragmentshader  ColoredCube.vertexshader  SkyboxShader.fragmentshader  SkyboxShader.vertexshader  loadShader.cpp  loadShader.h
antoine/: AppAntoine.cpp  AppAntoine.h
cmake/: imgui-snippet.cpp
elvyn/: AppElvyn.cpp  AppElvyn.h  TestingZone.cpp
helper/: FastNoiseLite.h  ModelLoader.cpp  ModelLoader.h  find_exe_path.cpp  find_exe_path.h  stb_image.cpp  stb_image.h
tom/: AppTom.cpp  AppTom.h
